--- a/style.css
+++ b/style.css
@@ -50,3 +50,16 @@ h2{
     border: 3px solid black;
     margin-top: 20px;
 }
+
+aside{
+    float: right;
+    width: 30%;
+    height: 50px;
+    padding-top: 5px;
+    padding-bottom: 100px;
+    background-color: rgba(112, 108, 108,0.5);
+    margin-right: 80px;
+    text-align: center;
+    font-size: 20px;
+
+}
