--- a/style.css
+++ b/style.css
@@ -56,10 +56,16 @@ aside{
     width: 30%;
     height: 50px;
     padding-top: 5px;
-    padding-bottom: 100px;
+    padding-bottom: 250px;
     background-color: rgba(112, 108, 108,0.5);
     margin-right: 80px;
     text-align: center;
     font-size: 20px;
-
+   
+}
+#aside_home{
+    padding-bottom: 410px;
+}
+#aside_swimmer{
+    padding-bottom: 450px;
 }
